--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/img"
+                android:id="@+id/imageItem"
                 android:layout_width="match_parent"
                 android:layout_height="100dp" />
 
