--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,8 +15,8 @@
 
             <ImageView
                 android:id="@+id/imageItem"
-                android:layout_width="match_parent"
-                android:layout_height="100dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/title"
