--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,13 +19,25 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/item_movie_release_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="date" />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/item_movie_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title" />
+
+            <TextView
+                android:id="@+id/item_movie_genre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title" />
+
+            <TextView
+                android:id="@+id/item_movie_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title" />
