--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,7 @@
             android:background="@drawable/movie_border">
 
             <ImageView
-                android:id="@+id/imageItem"
+                android:id="@+id/movieImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
@@ -46,7 +46,7 @@
                 android:text="original_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageItem" />
+                app:layout_constraintTop_toBottomOf="@+id/movieImage" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
