--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:contentDescription="@string/imageitem"
+                android:contentDescription="@string/imageItem"
                 android:radius="10dp"
                 android:scaleType="fitCenter"
                 app:layout_constraintTop_toTopOf="parent"
