--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_overview"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_summary"
                     app:srcCompat="@mipmap/ic_launcher"
                     tools:background="@color/white" />
 
@@ -92,7 +92,7 @@
                     tools:background="@color/white" />
 
                 <TextView
-                    android:id="@+id/textView_overview"
+                    android:id="@+id/textView_summary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
