--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,7 @@
             android:background="@drawable/movie_border">
 
             <ImageView
-                android:id="@+id/movieImage"
+                android:id="@+id/movie_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
@@ -30,7 +30,7 @@
                 tools:layout_editor_absoluteX="10dp" />
 
             <RatingBar
-                android:id="@+id/ratingBar"
+                android:id="@+id/rating_bar"
                 style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
                 android:text="@string/originalTitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movieImage" />
+                app:layout_constraintTop_toBottomOf="@+id/movie_image" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
