--- a/app/src/main/res/menu/menu_dynamic.xml
+++ b/app/src/main/res/menu/menu_dynamic.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/linearLayoutManager"
         android:icon="@drawable/icon_linear"
-        android:title="@string/linearLayoutManager"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="MenuTitle" />
 
 </menu>
