--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/linearLayoutManager"
         android:icon="@drawable/icon_grilled"
-        android:title="@string/linearLayoutManager"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        tools:ignore="MenuTitle" />
 
     <item
         android:id="@+id/gridLayoutManager"
         android:icon="@drawable/icon_grilled"
-        android:title="@string/gridLayoutManager"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        tools:ignore="MenuTitle" />
 
     <item
         android:id="@+id/staggeredGridLayoutManager"
         android:icon="@drawable/icon_grilled"
-        android:title="@string/staggeredGridLayoutManager"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        tools:ignore="MenuTitle" />
 
 </menu>
