--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -101,7 +101,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/text_view_title_release_date"
                     tools:text="TextView" />
 
-                <TextViewK
+                <TextView
                     android:id="@+id/text_view_summary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
