--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -61,8 +61,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rating_bar_average"
-            tools:text="8.8" />
+            app:layout_constraintTop_toBottomOf="@id/rating_bar_average" />
 
         <ScrollView
             android:layout_width="0dp"
