--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:padding="@dimen/padding">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:scaleType="fitCenter"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@mipmap/ic_launcher"
-                tools:layout_editor_absoluteX="10dp" />
+                tools:layout_editor_absoluteX="@dimen/layout_editor_absoluteX" />
 
             <RatingBar
                 android:id="@+id/rating_bar"
